--- a/header.html
+++ b/header.html
@@ -6,6 +6,6 @@
 				<table width="100%" cellpadding="0" cellspacing="0" border="0">
 					<tr>
 						<td colspan="5" valign="top" align="left" style="text-align:center;">
-							<table cellpadding="2" cellspacing="0" border="0" width="100%">
+							<table cellpadding="2" cellspacing="0" border="0" width="100%" class="table3">
 								<tr>
 									<td style="width:<wpdisplay disp=wp.container.width>" valign="top" align="left">
